--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,12 @@
     <groupId>com.leon</groupId>
     <artifactId>position-check-disruptor</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <logback.version>1.2.3</logback.version>
+        <slf4j.version>1.7.31</slf4j.version>
+        <jackson.version>2.12.3</jackson.version>
+        <java.version>1.8</java.version>
+    </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -31,20 +36,40 @@
             <artifactId>disruptor</artifactId>
             <version>3.4.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
     </dependencies>
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
