--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,30 @@
         </dependencies>
     </dependencyManagement>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.6.RELEASE</version>
+    </parent>
+
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
@@ -85,7 +108,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.leon.disruptor.DistruptorMain</mainClass>
+                    <mainClass>com.leon.service.DisruptorServiceImpl</mainClass>
                 </configuration>
             </plugin>
             <plugin>
