--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
         <slf4j.version>1.7.31</slf4j.version>
         <jackson.version>2.12.3</jackson.version>
         <java.version>1.8</java.version>
-        <chronicle.version>3.17.2</chronicle.version>
+        <chronicle.version>3.21.86</chronicle.version>
+        <reactor-core.version>3.3.9.RELEASE</reactor-core.version>
+        <lmax-disruptor.version>3.4.4</lmax-disruptor.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -29,7 +31,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.3.0.RELEASE</version>
     </parent>
 
     <dependencies>
@@ -53,12 +55,12 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
-            <version>3.3.9.RELEASE</version>
+            <version>${reactor-core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
-            <version>3.4.4</version>
+            <version>${lmax-disruptor.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
