file reader implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 bufferSize=4096
-writerFileName=horatio.txt
-readerFileName=harper.txt
+writerFilePath=application.properties
+readerFilePath=application.properties
 server.port=20010
 server.hostname=localhost
