--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 bufferSize=4096
 writerFilePath=resources/output.txt
+startOfDayInventoryPositionFilePath=SOD.json
 readerFilePath=horatio.txt
 server.port=20010
 server.hostname=localhost
