processing different requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ startOfDayInventoryPositionFilePath=SOD.json
 readerFilePath=horatio.txt
 server.port=20010
 server.hostname=localhost
+chronicleMapFilePath=../logs/position-inventory.txt
