Added ActiveMQ configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ readerFilePath=horatio.txt
 server.port=20010
 server.hostname=localhost
 chronicleMapFilePath=../logs/position-inventory.txt
+spring.activemq.broker-url=tcp://localhost:61616
