--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ server.port=20010
 server.hostname=localhost
 chronicleMapFilePath=../logs/position-inventory.txt
 spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.position.check.response.topic=position-check-response
