--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.hostname=localhost
 chronicleMapFilePath=../logs/position-inventory.txt
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.position.check.response.topic=position-check-response
+in.silent.mode=false
+is.primary=true
