--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 bufferSize=4096
-writerFilePath=resources/output.txt
+writer.file.path=resources/output.txt
 startOfDayInventoryPositionFilePath=SOD.json
-readerFilePath=horatio.txt
+reader.File.Path=horatio.txt
 server.port=20010
 server.hostname=localhost
 chronicleMapFilePath=../logs/position-inventory.txt
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.position.check.response.topic=position-check-response
+spring.activemq.position.check.request.topic=position-check-request
 spring.jms.pub-sub-domain=true
 in.silent.mode=false
 is.primary=true
