--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ chronicleMapFilePath=../logs/position-inventory.txt
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.position.check.response.topic=position-check-response
 spring.activemq.position.check.request.topic=position-check-request
+disruptor.reader.class=FileDisruptorReader
+disruptor.writer.class=JMSDisruptorWriter
 spring.jms.pub-sub-domain=true
 in.silent.mode=false
 is.primary=true
