--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.position.check.response.topic=position-check-response
 spring.activemq.position.check.request.topic=position-check-request
 disruptor.reader.class=FileDisruptorReader
+#disruptor.reader.class=JMSDisruptorReader
 disruptor.writer.class=JMSDisruptorWriter
 spring.jms.pub-sub-domain=true
 in.silent.mode=false
