--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ chronicleMapFilePath=../logs/position-inventory.txt
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.position.check.response.topic=position-check-response
 spring.activemq.position.check.request.topic=position-check-request
+spring.activemq.heartbeat.topic=heartbeat-topic
 disruptor.reader.class=FileDisruptorReader
 #disruptor.reader.class=JMSDisruptorReader
 disruptor.writer.class=JMSDisruptorWriter
