--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ disruptor.writer.class=JMSDisruptorWriter
 spring.jms.pub-sub-domain=true
 in.silent.mode=false
 is.primary=true
+heartbeat.check.maximum.interval=500
