--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ disruptor.writer.class=JMSDisruptorWriter
 spring.jms.pub-sub-domain=true
 is.primary=true
 heartbeat.check.maximum.interval=500
+inbound.journal.path=../logs/inbound-journal.txt
+outbound.journal.path=../logs/outbound-journal.txt
