--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ is.primary=true
 heartbeat.check.maximum.interval=500
 inbound.journal.path=../logs/inbound-journal.txt
 outbound.journal.path=../logs/outbound-journal.txt
+inbound.journal.recovery.path=../logs/inbound-journal-recovery.txt
