refactored recovery mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ startOfDayInventoryPositionFilePath=SOD.json
 reader.File.Path=horatio.txt
 server.port=20010
 server.hostname=localhost
-chronicleMapFilePath=../logs/position-inventory.txt
+chronicle.map.file.path=../logs/position-inventory.txt
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.position.check.response.topic=position-check-response
 spring.activemq.position.check.request.topic=position-check-request
@@ -17,4 +17,4 @@ is.primary=true
 heartbeat.check.maximum.interval=500
 inbound.journal.path=../logs/inbound-journal.txt
 outbound.journal.path=../logs/outbound-journal.txt
-inbound.journal.recovery.path=../logs/inbound-journal-recovery.txt
+inbound.journal.recovery.file.path=../logs/inbound-journal-recovery.txt
