async logging and nano-second time keeping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-bufferSize=4096
+buffer.size=4096
 writer.file.path=resources/output.txt
 startOfDayInventoryPositionFilePath=SOD.json
-reader.File.Path=horatio.txt
+reader.file.path=horatio.txt
 server.port=20010
 server.hostname=localhost
 chronicle.map.file.path=../logs/position-inventory.txt
