JMS listener class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ heartbeat.check.maximum.interval=200
 inbound.journal.path=../logs/inbound-journal.txt
 outbound.journal.path=../logs/outbound-journal.txt
 inbound.journal.recovery.file.path=../logs/inbound-journal-recovery.txt
+input.reader.end.indicator=END_OF_MESSAGES
