--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.port=20010
 server.hostname=localhost
 chronicle.map.file.path=../logs/position-inventory.txt
 spring.activemq.broker-url=tcp://localhost:61616
+
 spring.activemq.position.check.response.topic=position-check-response
 spring.activemq.position.check.request.topic=position-check-request
 spring.activemq.heartbeat.topic=heartbeat-topic
@@ -19,3 +20,8 @@ inbound.journal.path=../logs/inbound-journal.txt
 outbound.journal.path=../logs/outbound-journal.txt
 inbound.journal.recovery.file.path=../logs/inbound-journal-recovery.txt
 input.reader.end.indicator=END_OF_MESSAGES
+
+jms.output.writer=false
+file.output.writer=true
+file.input.reader=true
+jms.input.reader=false
